// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform Loggers AWS Error Object 1`] = `
Object {
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded",
  "pid": 1337,
  "stack": "Error: Ded
    at Object.<anonymous> (/srv/test/__tests__/platform.test.ts:41:18)
    at Object.asyncJestTest (/srv/test/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (<anonymous>)
    at mapper (/srv/test/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
  "time": 1234567890000,
  "type": "Error",
}
`;

exports[`Platform Loggers AWS Lambda Error Object 1`] = `
Object {
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded",
  "pid": 1337,
  "stack": "Error: Ded
    at Object.<anonymous> (/srv/test/__tests__/platform.test.ts:50:18)
    at Object.asyncJestTest (/srv/test/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (<anonymous>)
    at mapper (/srv/test/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
  "time": 1234567890000,
  "type": "Error",
}
`;

exports[`Platform Loggers AWS Lambda Logger + contextId 1`] = `
Object {
  "_context": Object {
    "stuff": true,
  },
  "_contextId": "testContextId",
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`Platform Loggers GCP Cloud Run 1`] = `
Object {
  "hostname": "testhost",
  "message": "hello",
  "pid": 1337,
  "severity": "WARNING",
  "time": "2009-02-13T23:31:30.000Z",
}
`;

exports[`Platform Loggers GCP Cloud Run Error Object 1`] = `
Object {
  "hostname": "testhost",
  "message": "Ded",
  "pid": 1337,
  "severity": "ERROR",
  "stack_trace": "Error: Ded
    at Object.<anonymous> (/srv/test/__tests__/platform.test.ts:32:18)
    at Object.asyncJestTest (/srv/test/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (<anonymous>)
    at mapper (/srv/test/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
  "time": "2009-02-13T23:31:30.000Z",
  "type": "Error",
}
`;
